@@ -1,0 +1,36 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-testbrowser/zope-testbrowser-3.8.1.ebuild,v 1.1 2010/04/19 20:02:11 arfrever Exp $
+
+EAPI="3"
+PYTHON_DEPEND="2"
+SUPPORT_PYTHON_ABIS="1"
+
+inherit distutils
+
+MY_PN="${PN/-/.}"
+MY_P="${MY_PN}-${PV/_alpha/a}"
+
+DESCRIPTION="Programmable browser for functional black-box tests"
+HOMEPAGE="http://pypi.python.org/pypi/zope.testbrowser"
+SRC_URI="http://pypi.python.org/packages/source/${MY_PN:0:1}/${MY_PN}/${MY_P}.tar.gz"
+
+LICENSE="ZPL"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ppc ~sparc ~x86"
+IUSE=""
+
+RDEPEND="dev-python/clientform
+	<dev-python/mechanize-0.2
+	dev-python/pytz
+	net-zope/zope-app-testing
+	net-zope/zope-interface
+	net-zope/zope-schema"
+DEPEND="${RDEPEND}
+	dev-python/setuptools"
+RESTRICT_PYTHON_ABIS="3.*"
+
+S="${WORKDIR}/${MY_P}"
+
+PYTHON_MODNAME="${PN/-//}"
+DOCS="CHANGES.txt README.txt"
