@@ -1,6 +1,12 @@
 # ChangeLog for net-zope/zope-testbrowser
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-testbrowser/ChangeLog,v 1.6 2010/03/14 17:53:14 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-testbrowser/ChangeLog,v 1.7 2010/04/19 20:02:11 arfrever Exp $
+
+*zope-testbrowser-3.8.1 (19 Apr 2010)
+
+  19 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -zope-testbrowser-3.8.0.ebuild, +zope-testbrowser-3.8.1.ebuild:
+  Version bump.
 
 *zope-testbrowser-3.8.0 (14 Mar 2010)
 
